# eveonline-sde-util

./: Cargo.toml  README.md
src/: binaries.rs  lib.rs  resources.rs  sde_client.rs  version.rs
src/version/: builder.rs
