[package]
name = "eveonline-sde-util"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
bytes = "1.10.1"
csv = "1.3.1"
futures = "0.3.31"
http-cache-reqwest = "0.15.1"
reqwest = { version = "0.12.18", features = ["rustls-tls", "stream"] }
reqwest-middleware = "0.4.2"
reqwest-retry = "0.7.0"
reqwest-tracing = "0.5.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["tracing"] }
tokio-util = "0.7.15"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
